# ======================================================================================================================================
# general project settings
# ======================================================================================================================================
cmake_minimum_required(VERSION 3.9.6)

project(unitTests)

message(STATUS "Processing CMakeLists.txt file in folder:${CMAKE_CURRENT_LIST_DIR}")

# ======================================================================================================================================
# GTest realted settings
# ======================================================================================================================================

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/googletest-release-1.8.0)

enable_testing()

include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

# ======================================================================================================================================
# include directories
# ======================================================================================================================================

include_directories(${CMAKE_CURRENT_LIST_DIR}/../globalIncludeDir)

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================

# Add the ThreadBase class's relevant list of tests
#file(GLOB_RECURSE HS_SRC_THREAD_BASE_GTESTS
#    "${CMAKE_CURRENT_LIST_DIR}/threadBaseTests/*.cpp"
#    "${CMAKE_CURRENT_LIST_DIR}/threadBaseTests/*.h") 


# ======================================================================================================================================
# Create dependencies libraries
# ======================================================================================================================================

# Create the memory leak detector library
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/memoryLeakDetector ${CMAKE_CURRENT_LIST_DIR}/../../build/unitTests/memoryLeakDetector)

# ======================================================================================================================================
# create the unit tests executables
# ======================================================================================================================================

#add_executable(threadBaseUnitTests ${HS_SRC_THREAD_BASE_GTESTS})


# ======================================================================================================================================
# link the each executable with all relevant libraries
# ======================================================================================================================================

#target_link_libraries(threadBaseUnitTests gtest gtest_main memoryLeakDetectorLib)


# ======================================================================================================================================
# GTest realted settings
# ======================================================================================================================================

#add_test(threadBaseUnitTests threadBaseUnitTests)



