# ======================================================================================================================================
# general project settings
# ======================================================================================================================================
cmake_minimum_required(VERSION 3.9.6)

project(mallocAndFreeWrappers)

message(STATUS "Processing CMakeLists.txt file in folder:${CMAKE_CURRENT_LIST_DIR}")

# ======================================================================================================================================
# include directories
# ======================================================================================================================================


# ======================================================================================================================================
# set required flags
# ======================================================================================================================================

set(MALLOC_AND_FREE_WRAPPERS_FLAGS "-Wl,--wrap,malloc -Wl,--wrap,free")

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
	set(CMAKE_CXX_FLAGS ${MALLOC_AND_FREE_WRAPPERS_FLAGS})
	message(STATUS "Processing CMakeLists.txt file in folder:${CMAKE_CURRENT_LIST_DIR}, setting specific flags for in house malloc and free version")
endif()


# ======================================================================================================================================
# group all source files of the library
# ======================================================================================================================================

file(GLOB_RECURSE MALLOC_AND_FREE_WRAPPERS_SRC "${CMAKE_CURRENT_LIST_DIR}/*.c"
    					       "${CMAKE_CURRENT_LIST_DIR}/*.h") 

# ======================================================================================================================================
# Create dependencies libraries
# ======================================================================================================================================


# ======================================================================================================================================
# create the library 
# ======================================================================================================================================
add_library(mallocAndFreeWrappersLib SHARED ${MALLOC_AND_FREE_WRAPPERS_SRC})

   
# ======================================================================================================================================
# link the library with all other relevant libraries
# ======================================================================================================================================
target_link_libraries(mallocAndFreeWrappersLib dl)




