# ======================================================================================================================================
# general project settings
# ======================================================================================================================================

cmake_minimum_required(VERSION 3.9.6)

project(memoryLeakDetectorLib)

message(STATUS "Processing CMakeLists.txt file in folder:${CMAKE_CURRENT_LIST_DIR}")

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================

# Add the memory leak detector sources so we will build a library from it
file(GLOB_RECURSE SRC_MEM_LEAK_DETECTOR
    "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
    "${CMAKE_CURRENT_LIST_DIR}/*.h") 

# ======================================================================================================================================
# create the library
# ======================================================================================================================================

add_library(memoryLeakDetectorLib ${SRC_MEM_LEAK_DETECTOR})

# ======================================================================================================================================
# link the library with additional relevant libraries
# ======================================================================================================================================

target_link_libraries(memoryLeakDetectorLib gtest gtest_main)

