# =====================================================================================================================================
# general project settings
# ======================================================================================================================================
cmake_minimum_required(VERSION 3.9)

project(secureConnectionHandler)

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

# enable c++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# needed for OpenSSL
find_package(OpenSSL REQUIRED)

# ======================================================================================================================================
# include directories
# ======================================================================================================================================
# include_directories(${CMAKE_CURRENT_LIST_DIR}/../../globalIncludeDir)
include_directories(${OPENSSL_INCLUDE_DIR})

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================
file(GLOB_RECURSE SECURE_CONNECTION_HANDLER_SRC "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
			    		        "${CMAKE_CURRENT_LIST_DIR}/*.h")

# ======================================================================================================================================
# add relevant sub directories -- invoke their CMakeLists.txt files
# ======================================================================================================================================


# ======================================================================================================================================
# create the library 
# ======================================================================================================================================
add_library(secureConnectionHandlerLib SHARED ${SECURE_CONNECTION_HANDLER_SRC})

   
# ======================================================================================================================================
# link the library with all other relevant libraries
# ======================================================================================================================================
target_link_libraries(secureConnectionHandlerLib ${OPENSSL_LIBRARIES})


