# =====================================================================================================================================
# general project settings
# ======================================================================================================================================
cmake_minimum_required(VERSION 3.9)

project(stdThreadRaiiWrapper)

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

# enable c++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ======================================================================================================================================
# include directories
# ======================================================================================================================================
# include_directories(${CMAKE_CURRENT_LIST_DIR}/../../globalIncludeDir)

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================
file(GLOB_RECURSE STD_THREAD_RAII_WRAPPER_SRC "${CMAKE_CURRENT_LIST_DIR}/*.cpp"
			    		      "${CMAKE_CURRENT_LIST_DIR}/*.h")

# ======================================================================================================================================
# add relevant sub directories -- invoke their CMakeLists.txt files
# ======================================================================================================================================


# ======================================================================================================================================
# create the library 
# ======================================================================================================================================
add_library(stdThreadRaiiWrapperLib SHARED ${STD_THREAD_RAII_WRAPPER_SRC})

   
# ======================================================================================================================================
# link the library with all other relevant libraries
# ======================================================================================================================================
if(UNIX AND NOT APPLE)
    target_link_libraries(stdThreadRaiiWrapperLib pthread)
endif()

