# =====================================================================================================================================
# general project settings
# ======================================================================================================================================
cmake_minimum_required(VERSION 3.9)

message(STATUS "processing CMakeLists of project:${CMAKE_PROJECT_NAME} within folder:${CMAKE_CURRENT_LIST_DIR}")

# enable c++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ======================================================================================================================================
# include directories
# ======================================================================================================================================
#include_directories(${CMAKE_CURRENT_LIST_DIR}/globalIncludeDir)

# ======================================================================================================================================
# group all source files of the executable
# ======================================================================================================================================
file(GLOB_RECURSE ALL_SRC "${CMAKE_CURRENT_LIST_DIR}/*.cpp") 

# ======================================================================================================================================
# add relevant sub directories -- invoke their CMakeLists.txt files
# ======================================================================================================================================


# ======================================================================================================================================
# create the library executable
# ======================================================================================================================================

add_executable(mainExe ${BCP_MAIN_EXE_SRC})
   
# ======================================================================================================================================
# link the main executable with all relevant libraries
# ======================================================================================================================================
                 
target_link_libraries(mainExe utilsLib)
